--- a/module-3/02_CSS_Selectors/exercise-student/style.css
+++ b/module-3/02_CSS_Selectors/exercise-student/style.css
@@ -9,9 +9,82 @@ html {
 
 body {
   background-color: rgba(192, 192, 192, 0.1);
+  
 }
 
-ul {
+aside{
+  position:fixed;
+  width: 200px;
+  border-right: 1px solid  rgba(0, 173, 238, 0.4);
+  height: 100vh;
+  padding-right: 20px;
+  padding-left: 20px;
+
+  }
+  aside>img{
+    
+    height: 120px;
+   display: block;
+   margin:0 auto;
+   
+  }
+  main{
+    margin-left: 200px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  aside>nav>ul>li{
+    list-style: none;
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom:1px solid  rgba(0, 173, 238, 0.4);
+    margin: 10px auto;
+    padding-bottom: 10px;
+    width:80%;
+    line-height: 2;
+  }
+  li>a{
+    font-weight: bold ;
+    color: #00ADEE;
+    text-decoration: none;
+  }
+  li>a:hover{
+    text-decoration: underline;
+  }
+  header>img{
+    height: 120px;
+    size: 80%;
+
+  }
+  header+img.banner{
+    display: inline-block;
+     width: 100%;
+    
+  }
+  section div{
+    display: inline-block;
+    width: 33%;
+    padding-right: 20px;
+    margin-top: 20px;
+    vertical-align: top;
+}
+section div>h2{
+  color:#8CC36F;
+}
+section  div>h2>i{
+  margin-right: 10px;
+}
+div:not(#contact-us) {
+  border-right: solid rgba(170, 239, 135, 0.8) 1px;
+  
+  }
+  div:not(#first-child){
+    padding-left: 20px;
+  }
+
+
+ul{
   margin: 0;
   padding: 0;
+  
 }
