--- a/module-3/04_Flexbox/exercise-student/mini-exercises/flex-order/step-1/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/flex-order/step-1/main.css
@@ -17,4 +17,14 @@ body {
   margin: 0 10px;
 }
 
-.bio:nth-child(2) img {}
+
+
+
+.bio
+{
+  display: flex;
+
+}
+.bio:nth-child(2) img{
+  order: 2;
+}
