--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-4/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-4/main.css
@@ -43,3 +43,14 @@ li a:hover {
 .my-account img {
   width: 32px;
 }
+
+header,
+nav,
+ul,
+li,
+.spacer{
+  display: flex;
+}
+.spacer{
+  flex-basis: 100%;
+}
