--- a/module-3/04_Flexbox/exercise-student/mini-exercises/align-content-column/step-2/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/align-content-column/step-2/main.css
@@ -16,3 +16,11 @@ body {
   color: #fff;
   border: solid 1px #777;
 }
+.container,
+.box{
+  display: flex;
+  align-items: center;
+  align-items: flex-end;
+
+}
+
