--- a/module-3/04_Flexbox/exercise-student/mini-exercises/flex-items-size/step-2/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/flex-items-size/step-2/main.css
@@ -22,3 +22,16 @@ body {
 .box:nth-child(4) {
   background-color: #005270;
 }
+.container,
+.box{
+  display: flex;
+
+}
+.box:nth-child(2),
+.box:nth-child(4){
+  flex-grow: 2;
+}
+.box:nth-child(1),
+.box:nth-child(3){
+  flex-grow: 1;
+}
